# Wolf-Moon

./: README.md  aaa_map.pgm  aaa_map.yaml
.VSCodeCounter/2025-03-01_11-17-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-02_20-34-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-03_18-08-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
install/: local_setup.sh  setup.sh
install/SharedMemoryVideo/share/SharedMemoryVideo/: package.bash  package.zsh
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.sh  package.sh
install/cv_bridge/share/cv_bridge/: package.sh
install/fake_msg_publisher/lib/fake_msg_publisher/: fake_msg_publisher_node
install/fake_msg_publisher/share/fake_msg_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grid_map/share/grid_map/: package.sh
install/grid_map_cmake_helpers/share/grid_map_cmake_helpers/: package.sh
install/grid_map_core/share/grid_map_core/: local_setup.sh  package.sh
install/grid_map_costmap_2d/share/grid_map_costmap_2d/: package.sh
install/grid_map_cv/share/grid_map_cv/: local_setup.sh  package.sh
install/grid_map_demos/lib/grid_map_demos/: filters_demo  image_to_gridmap_demo  interpolation_demo  iterators_demo  move_demo  normal_filter_comparison_demo  octomap_to_gridmap_demo  opencv_demo  resolution_change_demo  simple_demo  tutorial_demo
install/grid_map_demos/share/grid_map_demos/: package.sh
install/grid_map_filters/share/grid_map_filters/: local_setup.sh  package.sh
install/grid_map_loader/lib/grid_map_loader/: grid_map_loader
install/grid_map_loader/share/grid_map_loader/: package.sh
install/grid_map_msgs/share/grid_map_msgs/: local_setup.sh  package.sh
install/grid_map_octomap/share/grid_map_octomap/: local_setup.sh  package.sh
install/grid_map_pcl/lib/grid_map_pcl/: grid_map_pcl_loader_node
install/grid_map_pcl/share/grid_map_pcl/: local_setup.sh  package.sh
install/grid_map_ros/share/grid_map_ros/: package.sh
install/grid_map_rviz_plugin/share/grid_map_rviz_plugin/: package.sh
install/grid_map_sdf/share/grid_map_sdf/: local_setup.sh  package.sh
install/grid_map_visualization/lib/grid_map_visualization/: grid_map_visualization
install/grid_map_visualization/share/grid_map_visualization/: local_setup.sh  package.sh
install/ig_lio_c/lib/ig_lio_c/: map_builder_node  map_converter_node
install/ig_lio_c/share/ig_lio_c/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ig_lio_c_msgs/share/ig_lio_c_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/nav2_behavior_tree/share/nav2_behavior_tree/: package.sh
install/nav2_common/share/nav2_common/: package.sh
install/nav2_costmap_2d/lib/nav2_costmap_2d/: nav2_costmap_2d  nav2_costmap_2d_cloud  nav2_costmap_2d_markers
install/nav2_costmap_2d/share/nav2_costmap_2d/: package.sh
install/nav2_lifecycle_manager/lib/nav2_lifecycle_manager/: lifecycle_manager
install/nav2_lifecycle_manager/share/nav2_lifecycle_manager/: local_setup.sh  package.sh
install/nav2_map_server/lib/nav2_map_server/: costmap_filter_info_server  map_saver_cli  map_saver_server  map_server
install/nav2_map_server/share/nav2_map_server/: local_setup.sh  package.sh
install/octomap_dynamic_map/lib/: liboctomap.so.1.9.8  liboctomath.so.1.9.8
log/: latest_build
scripts/: WatchDog.sh  WatchDog_full_system.sh
src/TUP-Sentry-Decision-V2/: .gitignore
src/armor_detector/ArmorDetector/: CMakeLists.txt  README.md  package.xml
src/armor_detector/ArmorDetector/config/: info_config.yaml  init_config.yaml
src/armor_detector/ArmorDetector/model/: yolox.xml  yolox_armor.xml  yolox_armor3.mapping
src/armor_detector/ArmorDetector/model/yolox_armor2/: yolox(5).mapping  yolox(5).onnx  yolox(5).xml  yolox.xml
src/armor_processor/ArmorProcessor/: CMakeLists.txt  README.md  package.xml
src/armor_processor/ArmorProcessor/config/: info_config.yaml  init_config.yaml
src/armor_processor/ArmorProcessor/launch/: autoaim_bringup_launch.py
src/auto_aim_interfaces/msg/: Armor.msg  Uart.msg
src/camera_driver/camera_dhg/: CMakeLists.txt  package.xml
src/camera_driver/camera_dhg/config/: init_config.yaml
src/camera_driver/camera_dhg/daheng_sdk/: GxIAPI.h
src/camera_driver/camera_dhg/src/: daheng_camera_node.cpp
src/camera_driver/camera_hik/: CMakeLists.txt
src/camera_driver/camera_mdv/: CMakeLists.txt  package.xml
src/camera_driver/camera_usb/: CMakeLists.txt  package.xml
src/camera_driver/camera_usb/config/: config.yaml
src/camera_driver/camera_usb/src/: USB_camera_node.cpp
src/lidar_navigation/localization_mapping/: package.xml
src/localization_mapping/: CMakeLists.txt  README.md
src/localization_mapping/config/: parameters.yaml
src/localization_mapping/include/: map_builder_node.hpp  map_converter_node.hpp
src/localization_mapping/launch/: map_mapping_launch.py
src/localization_mapping/src/: map_builder_node.cpp  map_converte_node.cpp  map_converter_node.cpp
src/navigation_planning/: CMakeLists.txt  package.xml
src/navigation_planning/config/: parameters.yaml
src/navigation_planning/include/: dijkstra_planner.hpp  way_planner_node.hpp
src/navigation_planning/include/dijkstra/: color.hpp  dijkstra_planner.hpp  map_processor.hpp
src/navigation_planning/map/: 129_map.pgm  5.pgm  5.yaml  aaa_map.pgm  aaa_map.yaml  mmm_map.pgm  mmm_map.yaml  rmuc_map_edit.pgm  rmuc_map_edit.yaml
src/navigation_planning/src/: way_planner_node.cpp
src/navigation_planning/src/dijkstra/: dijkstra_planner.cpp  map_processor.cpp
src/sentry_decision_v2/JsonFiles/: default_decisions.json
src/sentry_decision_v2/config/: parameters.yaml
src/sentry_decision_v2/src/: decision_node.cpp
(+219 files in other folders)
