<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Your_email@example.com">buck_moon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>nav2_msgs</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>vision_opencv</buildtool_depend>
  <buildtool_depend>grid_map_msgs</buildtool_depend>
  <buildtool_depend>grid_map_core</buildtool_depend>
  <buildtool_depend>grid_map_ros</buildtool_depend>
  <buildtool_depend>nav2_costmap_2d</buildtool_depend>
  <buildtool_depend>rclcpp_components</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>tf2</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>tf2_geometry_msgs</buildtool_depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
